--- a/COMP5425Project/COMP5425Project/assets/sbirmainwindow.ui
+++ b/COMP5425Project/COMP5425Project/assets/sbirmainwindow.ui
@@ -199,7 +199,7 @@
      </widget>
     </item>
     <item>
-     <layout class="QGridLayout" name="gridLayout_4">
+     <layout class="QGridLayout" name="gridLayout_4" columnstretch="1,3">
       <item row="2" column="0">
        <layout class="QVBoxLayout" name="verticalLayout_2">
         <item>
@@ -243,22 +243,6 @@
          </widget>
         </item>
        </layout>
-      </item>
-      <item row="4" column="1">
-       <widget class="QFrame" name="frame_result">
-        <property name="minimumSize">
-         <size>
-          <width>640</width>
-          <height>480</height>
-         </size>
-        </property>
-        <property name="frameShape">
-         <enum>QFrame::StyledPanel</enum>
-        </property>
-        <property name="frameShadow">
-         <enum>QFrame::Raised</enum>
-        </property>
-       </widget>
       </item>
       <item row="4" column="0">
        <layout class="QGridLayout" name="gridLayout_5">
@@ -311,7 +295,7 @@
      <x>0</x>
      <y>0</y>
      <width>1667</width>
-     <height>23</height>
+     <height>26</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuIO">
